rev_17-Apr_01-06_33

Switched dafault filebrowser settings to all and ckgedit

18 Nov
Fix for HTML in user profile panel

2 Feb 2017
Synched with ckgedit

3 March 
remove backslashes from ends of blockquote

Mar 21
Converted all uses of ckgedit to ckgdoku in code; now it loads as plugin ckgdoku

Mar 22
ckgedit/ckgdoku warning: one must be disabled (meta.php)

Mar 23
updated localization of symlink creation in meta.php

Mar 24
Merged trans into master

Mar 28
Fix in script.js for assigning image parameters (size, link, align)

Mar 29
Synced to captcha

Mar 30
Fixed hiding specialized buttons for non-users wehn captcha is on

Apr 1
removed extra / from fileurl sent from media manager to ckeditor link dialog in script.js (pull  #9) 